added profile pic

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <img src="Murphy_Resume.png" alt=""></img>
     <img src="Murphy_Resume_2.png" alt=""></img>
+    <img src="Murphy.jfif" alt=""></img>
 </body>
 </html>
